Removes temporary files and fixes css pathing

--- a/talk/css/theme/source/bekk.scss
+++ b/talk/css/theme/source/bekk.scss
@@ -67,7 +67,7 @@ body:before {
 /* Data flow example */
 
 .slides .dataflow-example {
-    background: url("img/data_flow.svg") left top no-repeat;
+    background: url("../../img/data_flow.svg") left top no-repeat;
     position: relative;
     width: 900px;
     height: 364px;
