--- a/talk/css/theme/source/bekk.scss
+++ b/talk/css/theme/source/bekk.scss
@@ -159,6 +159,9 @@ body:before {
   .underline {
     border-bottom: 2px solid #fff;
   }
+  .bold {
+    font-weight: bold;
+  }
 
   .black {
     color: #000;
