--- a/talk/css/theme/source/bekk.scss
+++ b/talk/css/theme/source/bekk.scss
@@ -151,6 +151,31 @@ body:before {
   }
 }
 
+
+.heartrate-box {
+  left: 0;
+  top: 0;
+  position: absolute;
+  width: 200px;
+  height: 50px;
+  z-index: 9999;
+
+  display: none;
+
+  p {
+    position: absolute;
+    // color: rgba(253, 81, 87, 0.7);
+    color: rgba(255, 255, 255, 0.7);
+    text-align: center;
+    margin-top: 20px;
+    width: 100%;
+
+
+    font-family: $mainFont;
+    font-size: 3em;
+  }
+}
+
 .reveal {
   .stylish-text {
     font-family: $stylishFont;
@@ -199,3 +224,4 @@ body:before {
     line-height: 1.4em;
   }
 }
+
